--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 os:
   - linux
-  - windows
 language: node_js
 node_js:
   - '12'
@@ -9,6 +8,7 @@ env:
   global:
     - CC=clang
     - CXX=clang++
+  - APM_TEST_PACKAGES="linter"
 install:
   - curl -s -O https://raw.githubusercontent.com/atom/ci/master/build-package.sh
   - chmod u+x build-package.sh
