--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ node_js:
   - '12'
   - '10'
 env:
-  - APM_TEST_PACKAGES="linter"
-env:
   global:
     - CC=clang
     - CXX=clang++
+  jobs:
+    - APM_TEST_PACKAGES="linter"
 install:
   - curl -s -O https://raw.githubusercontent.com/atom/ci/master/build-package.sh
   - chmod u+x build-package.sh
