--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"atom": ">=1.34.0"
 	},
 	"scripts": {
-		"lint": "xo --ignore='mocks/**/*'",
+		"lint": "xo --ignore='mocks/**/*' --ignore='test/**/*'",
 		"pretest": "npm run lint",
 		"test": "ava"
 	},
