--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	},
 	"private": true,
 	"engines": {
-		"atom": ">=1.34.0"
+		"atom": ">=1.47.0"
 	},
 	"scripts": {
 		"lint": "xo --ignore='mocks/**/*' --ignore='_test/**/*'",
@@ -50,21 +50,21 @@
 		"checker"
 	],
 	"dependencies": {
-		"atom-linter": "^2.2.0",
-		"atom-package-deps": "^0.1.2",
-		"eslint-rule-documentation": "^1.0.0",
-		"load-json-file": "^6.2.0",
-		"p-props": "^4.0.0",
-		"pkg-dir": "^4.2.0",
-		"resolve-from": "^5.0.0",
-		"xo": "^0.30.0"
+		"atom-linter": "~2.2.0",
+		"atom-package-deps": "~0.1.2",
+		"eslint-rule-documentation": "~1.0.0",
+		"load-json-file": "~6.2.0",
+		"p-props": "~4.0.0",
+		"pkg-dir": "~4.2.0",
+		"resolve-from": "~5.0.0",
+		"xo": "~0.30.0"
 	},
 	"devDependencies": {
 		"@babel/register": "^7.0.0",
 		"ava": "^3.8.1",
 		"proxyquire": "^2.0.1",
 		"text-buffer": "^13.15.2",
-		"tmp": "0.2.1"
+		"tmp": "^0.2.1"
 	},
 	"package-deps": [
 		"linter:2.2.0"
