--- a/.travis.yml
+++ b/.travis.yml
@@ -16,14 +16,14 @@ env:
 
 before_install:
   - chmod u+x ./script/build-atom.sh
-  - ./script/build-atom.sh
+  - . ./script/build-atom.sh
 install:
   - chmod u+x ./script/build-package.sh
-  - ./script/build-package.sh
+  - . ./script/build-package.sh
 script:
   - npm rebuild
   - chmod u+x ./script/build-spec.sh
-  - ./script/build-spec.sh
+  - . ./script/build-spec.sh
   - npm run test
 notifications:
   email:
