--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
 		"checker"
 	],
 	"dependencies": {
-		"atom-linter": "~2.2.0",
-		"atom-package-deps": "~0.1.2",
+		"atom-package-deps": "~5.1.0",
 		"eslint-rule-documentation": "~1.0.0",
 		"load-json-file": "~6.2.0",
 		"p-props": "~4.0.0",
@@ -60,14 +59,14 @@
 		"xo": "~0.30.0"
 	},
 	"devDependencies": {
-		"@babel/register": "^7.0.0",
-		"ava": "^3.8.1",
-		"proxyquire": "^2.0.1",
-		"text-buffer": "^13.15.2",
-		"tmp": "^0.2.1"
+		"@babel/register": "^7.9.0",
+		"ava": "^3.8.0",
+		"proxyquire": "^2.1.0",
+		"text-buffer": "^13.17.0",
+		"tmp": "^0.2.0"
 	},
 	"package-deps": [
-		"linter:2.2.0"
+		"linter"
 	],
 	"providedServices": {
 		"linter": {
