--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"checker"
 	],
 	"dependencies": {
+		"atom-linter": "~10.0.0",
 		"atom-package-deps": "~5.1.0",
 		"eslint-rule-documentation": "~1.0.0",
 		"load-json-file": "~6.2.0",
