--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ install:
   - chmod u+x ./script/build-package.sh
   - . ./script/build-package.sh
 script:
-  - npm rebuild
+  - chmod u+x ./script/build-rebuild.sh
+  - . ./script/build-rebuild.sh
   - chmod u+x ./script/build-spec.sh
   - . ./script/build-spec.sh
   - npm run test
